--- a/TODO.txt
+++ b/TODO.txt
@@ -1,13 +1,12 @@
-1. Deal with question 3, whatever it means.
+1. Deal with question 3.
 
 2. Find out how to run scripts from the src folder within ipynb docs in the
 reports folder
 
-3. Make scripts for and move to src:
+3. Make scripts for the following and place in src:
   - Code for mounting
   - Functions used
 
 4. Improve response to question 5 in Assn 1 report
   - Create table that only has the person with the most wins, and the person
     with the most losses, for each "race"
-
